--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ REDIS_HOST=oregon-redis.render.com
 REDIS_PORT=6379
 REDIS_USER=red-cm3e4cen7f5s73bnr0dg
 REDIS_PASSWORD=SoO0Cvg9p8qYtdOht5y5u3B0GnLJkisa
+REDIS_INERNAL=redis://red-cm3e4cen7f5s73bnr0dg:6379
 
 # From render:
 # REDISCLI_AUTH=SoO0Cvg9p8qYtdOht5y5u3B0GnLJkisa redis-cli --user red-cm3e4cen7f5s73bnr0dg -h oregon-redis.render.com -p 6379 --tls                                                                                    
